[project]
name = "denoise-audio"
version = "0.1.2"
description = "Denoise WAV audio using RNNoise, DeepFilterNet, and FacebookResearch Denoiser."
readme = "README.md"
authors = [
    { name = "Surya Chand Rayala", email = "suryachand2k1@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = "==3.10.*"
dependencies = [
    "deepfilternet>=0.5.6",
    "denoiser>=0.1.5",
    "pyrnnoise>=0.4.3",
    "requests>=2.32.5",
    "torch==2.0.1",
    "torchaudio==2.0.2",
]

[project.urls]
Repository = "https://github.com/Surya-Rayala/denoise-audio.git"